# Falcom

./: .gitignore  CMakeLists.txt  README.md
common/include/: asuka.h
edao-patch/: PCSG00246.txt
edao-patch/src/: .clang_complete  Makefile  hook.c  hook.h  hook_stub.s  khash.h  log.c  log.h  main.c  memcpy_asm.S  memcpy_neon.S  tools.c  tools.h  translator.c  translator.h
font2png/src/: Makefile  font2png.c
makefont/src/: Makefile  code-table.txt  codeconvert.c  codeconvert.h  easyfont.c  easyfont.h  makefont.c  makefont.h
scripts/: CheckCNJPMatch.py  Common.py  CompareLength.py  ExtractNotTranslate.py  GenSJISCodeTable.py  GenUTF8CodeTable.py  ImportCodeTable.TBL  MakeCodeTable.py  MakeJPCNMap.py  MoveExtra.py  MoveOutput.bat  PackJPCNMap.py  ProcessEbootText.py  ReportDiff.py  ReportNotMatch.py  vitadump.py
